# omicau

./: LICENSE  README.md  RELEASING.md  environment.yml  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
docs/: index.html
docs/assets/: fonts.css  site.css
omicau/: __init__.py  _hints.py  cli.py  config.py
omicau/data/: __init__.py  _hub.py  alignment.py  allofus.py  benchmark_data.py  bootstrap.py  ccle.py  cptac.py  expression_atlas.py  metabolomics_workbench.py  openpbta.py  tcga.py  xena.py
omicau/diagnostics/: __init__.py  batch.py  batch_adjust.py  missingness.py
omicau/interpretation/: __init__.py  llm_client.py  llm_summary.py  utility.py
omicau/models/: __init__.py  base.py  classical.py  neural.py  survival.py
omicau/reporting/: __init__.py  _assets.py  docs_generator.py  reporter.py
omicau/ui/: __init__.py  inspect.py  routes.py  server.py
omicau/ui/static/: app.js  index.html  ui.css
packaging/: README.md  build-linux.sh  build-macos.sh  build-windows.ps1  omicau.iss  omicau.spec  omicau_launcher.py
packaging/conda-forge/: meta.yaml
tests/: test_smoke.py  test_ui_core.py
